swagger for get api single prod
